--- a/weather-dashboard/package.json
+++ b/weather-dashboard/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "use-places-autocomplete": "^4.0.1",
+    "weather-dashboard": "file:",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
