--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:css": "tailwindcss -i ./src/index.css -o ./src/output.css"
+    "build:css": "tailwindcss -i ./src/index.css -o ./src/output.css",
+    "prebuild": "npm prune --production"
   },
   "eslintConfig": {
     "extends": [
