--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-animated-weather": "^4.0.1",
     "react-cool-onclickoutside": "^1.7.0",
